syntax = "proto3";
package github.com.narqo.benchserder.internal.callback;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/narqo/benchserder/internal/engagementtype/generated.proto";
import "github.com/narqo/benchserder/internal/tokens/generated.proto";
import "github.com/narqo/benchserder/internal/device/generated.proto";
import "github.com/narqo/benchserder/internal/money/generated.proto";
import "github.com/narqo/benchserder/internal/nullable/generated.proto";
import "github.com/narqo/benchserder/internal/replacer/generated.proto";
import "github.com/narqo/benchserder/internal/fraud/generated.proto";
import "google/protobuf/timestamp.proto";

option (gogoproto.protosizer_all) = true;
option (gogoproto.sizer_all) = false;
option go_package = "callback";

// easyjson:json
message Data {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.typedecl) = false;
	bool terms_signed = 1;
	string reference_tag = 2;
	github.com.narqo.benchserder.internal.engagementtype.Type engagement_type = 3;
	string tracker = 4 [(gogoproto.casttype) = "github.com/narqo/benchserder/internal/tokens.TrackerToken"];
	string install_tracker = 5 [(gogoproto.casttype) = "github.com/narqo/benchserder/internal/tokens.TrackerToken"];
	string last_tracker = 6 [(gogoproto.casttype) = "github.com/narqo/benchserder/internal/tokens.TrackerToken"];
	string outdated_tracker = 7 [(gogoproto.casttype) = "github.com/narqo/benchserder/internal/tokens.TrackerToken"];
	string app_token = 8 [(gogoproto.casttype) = "github.com/narqo/benchserder/internal/tokens.AppToken"];
	string adid = 9 [(gogoproto.casttype) = "github.com/narqo/benchserder/internal/tokens.Adid"];
	string os_name = 10;
	string os_version = 11;
	string os_build = 12;
	string api_level = 13;
	string nonce = 14;
	string random = 15;
	string app_name = 16;
	string app_version = 17;
	string app_version_short = 18;
	string idfa = 19;
	string idfv = 20;
	string android_id = 21;
	string google_adid = 22;
	string fire_adid = 23;
	string web_uuid = 24;
	string win_udid = 25;
	string win_hwid = 26;
	string win_naid = 27;
	string win_adid = 28;
	github.com.narqo.benchserder.internal.device.SimSlotIds sim_slot_ids = 29 [(gogoproto.nullable) = false];
	string event_token = 30;
	github.com.narqo.benchserder.internal.money.Amount revenue_data = 31 [(gogoproto.nullable) = false];
	github.com.narqo.benchserder.internal.money.Cost cost = 32 [(gogoproto.nullable) = false];
	string cost_id_md5 = 33;
	string ip_address = 34;
	string proxy_ip_address = 35;
	string server_ip = 36;
	string mac_sha1 = 37;
	string mac_md5 = 38;
	string environment = 39;
	string referrer = 40;
	string country = 41;
	string language = 42;
	string region = 43;
	string mcc = 44;
	string mnc = 45;
	string manufacturer = 46;
	string client_sdk = 47;
	string store_name = 48;
	string store_app_id = 49;
	string session_count = 50;
	int64 global_session_count = 51 [(gogoproto.casttype) = "int"];
	string push_token = 52;
	string time_spent = 53;
	string last_time_spent = 54;
	string device_name = 55;
	string device_type = 56;
	string tracking_enabled = 57;
	github.com.narqo.benchserder.internal.nullable.Int zone_offset = 58 [(gogoproto.nullable) = false];
	string click_label = 59;
	string user_agent = 60;
	github.com.narqo.benchserder.internal.replacer.ActivityKind activity_kind = 61;
	string deeplink = 62;
	string search_term = 63;
	string click_referer = 64;
	bool impression_based = 65;
	github.com.narqo.benchserder.internal.fraud.Kind fraud_kind = 66;
	string cpu_type = 67;
	string hardware_name = 68;
	string network_type = 69;
	github.com.narqo.benchserder.internal.nullable.Int secret_id = 70 [(gogoproto.nullable) = false];
	bool is_imported = 71;
	bool is_server_to_server = 72;
	bool is_server_to_server_based = 73;
	google.protobuf.Timestamp click_time = 74 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp installed_at = 75 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp first_session_time = 76 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	string first_country = 77;
	string first_device_type = 78;
	string first_os_name = 79;
	google.protobuf.Timestamp received_at = 80 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp created_at_time = 81 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp last_session_time = 82 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp uninstalled_at = 83 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp reinstalled_at = 84 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	google.protobuf.Timestamp attribution_updated_at = 85 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
	int64 session_length = 86 [(gogoproto.casttype) = "int"];
	github.com.narqo.benchserder.internal.nullable.Duration pingback_ttl = 87 [(gogoproto.nullable) = false];
	github.com.narqo.benchserder.internal.nullable.Duration click_attribution_window = 88 [(gogoproto.nullable) = false];
	github.com.narqo.benchserder.internal.nullable.Duration impression_attribution_window = 89 [(gogoproto.nullable) = false];
	github.com.narqo.benchserder.internal.nullable.Duration fingerprint_attribution_window = 90 [(gogoproto.nullable) = false];
	github.com.narqo.benchserder.internal.nullable.Duration reattribution_attribution_window = 91 [(gogoproto.nullable) = false];
	github.com.narqo.benchserder.internal.nullable.Duration inactive_user_definition = 92 [(gogoproto.nullable) = false];
	map<string, string> partner_parameters = 93 [(gogoproto.casttype) = "Parameters"];
	map<string, string> partner_sdk_params = 94 [(gogoproto.casttype) = "Parameters"];
	map<string, string> publisher_params = 95 [(gogoproto.casttype) = "Parameters"];
	map<string, string> dynamic_callback_parameters = 96 [(gogoproto.casttype) = "Parameters"];
	map<string, string> api_partner_params = 97 [(gogoproto.casttype) = "Parameters"];
	int64 ad_impressions_count = 98 [(gogoproto.casttype) = "int"];
	string ad_revenue_network = 99;
	string ad_revenue_unit = 100;
	string ad_revenue_placement = 101;
	string ad_mediation_platform = 102;
}

